--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
   h1{
     font-size:50px;
   }
+  h2{
+    font-size: 30px;
+  }
   #title{
     text-align: center;
     font-family:"lucidia handwriting", cursive;
@@ -34,8 +37,10 @@
     text-align: center;
   }
   #early-img{
+    display: block;
     width:250px;
     height:250px;
+    justify-content: center;
   }
   #militia-title{
     font-family:"lucidia handwriting", cursive;
@@ -76,4 +81,33 @@
   #final-img{
     width:250px;
     height:250px;
+  }
+  p {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 100px;
+    margin-left: 100px;
+  }
+  h4 {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  #caption {
+    font-size: 12px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .link {
+    font-family:"lucidia handwriting", cursive;
+    color:black;
+    text-decoration: none;
+  }
+  .link:hover{
+    font-size:  20px;
+    color: red;
+  }
+  #top-link{
+    word-spacing: 5px;
+    text-align: center;
+  
   }
